// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Input Editable White Mandatory 1`] = `
<Input
  input={
    Object {
      "id": "textInputId",
      "isReadOnly": false,
      "isRequired": true,
      "label": "Label Heading",
      "placeholder": "Enter value",
      "styling": "editable-white",
    }
  }
  onChange={[Function]}
>
  <div>
    <label
      className="label"
      htmlFor="textInputId"
    >
      <div
        className="input-label"
      >
        Label Heading
      </div>
      <span
        className="mandatory"
        id="asterisk"
      >
        *
      </span>
       
      <span
        className="note"
      />
    </label>
    <input
      className="editable-white"
      id="textInputId"
      onChange={[Function]}
      placeholder="Enter value"
      readOnly={false}
      type="text"
    />
    <br />
    <span
      className="error"
    />
  </div>
</Input>
`;

exports[`Storyshots Input Editable White No Label 1`] = `
<Input
  input={
    Object {
      "id": "textInputId",
      "isReadOnly": false,
      "isRequired": false,
      "label": "",
      "placeholder": "Enter value",
      "styling": "editable-white",
    }
  }
  onChange={[Function]}
>
  <div>
    <input
      className="editable-white"
      id="textInputId"
      onChange={[Function]}
      placeholder="Enter value"
      readOnly={false}
      type="text"
    />
    <br />
    <span
      className="error"
    />
  </div>
</Input>
`;

exports[`Storyshots Input Editable White With Label 1`] = `
<Input
  input={
    Object {
      "id": "textInputId",
      "isReadOnly": false,
      "isRequired": false,
      "label": "Label Heading",
      "placeholder": "Enter value",
      "styling": "editable-white",
    }
  }
  onChange={[Function]}
>
  <div>
    <label
      className="label"
      htmlFor="textInputId"
    >
      <div
        className="input-label"
      >
        Label Heading
      </div>
       
      <span
        className="note"
      />
    </label>
    <input
      className="editable-white"
      id="textInputId"
      onChange={[Function]}
      placeholder="Enter value"
      readOnly={false}
      type="text"
    />
    <br />
    <span
      className="error"
    />
  </div>
</Input>
`;

exports[`Storyshots Input Mobile 1`] = `
<Input
  input={
    Object {
      "id": "textInputId",
      "isReadOnly": true,
      "isRequired": false,
      "label": "Label Heading",
      "placeholder": "Enter value",
      "styling": "non-editable-grey",
    }
  }
  onChange={[Function]}
>
  <div>
    <label
      className="label"
      htmlFor="textInputId"
    >
      <div
        className="input-label"
      >
        Label Heading
      </div>
       
      <span
        className="note"
      />
    </label>
    <input
      className="non-editable-grey"
      id="textInputId"
      onChange={[Function]}
      placeholder="Enter value"
      readOnly={true}
      type="text"
    />
    <br />
    <span
      className="error"
    />
  </div>
</Input>
`;

exports[`Storyshots Input Non Editable Grey 1`] = `
<Input
  input={
    Object {
      "id": "textInputId",
      "isReadOnly": true,
      "isRequired": false,
      "label": "Label Heading",
      "placeholder": "Enter value",
      "styling": "non-editable-grey",
    }
  }
  onChange={[Function]}
>
  <div>
    <label
      className="label"
      htmlFor="textInputId"
    >
      <div
        className="input-label"
      >
        Label Heading
      </div>
       
      <span
        className="note"
      />
    </label>
    <input
      className="non-editable-grey"
      id="textInputId"
      onChange={[Function]}
      placeholder="Enter value"
      readOnly={true}
      type="text"
    />
    <br />
    <span
      className="error"
    />
  </div>
</Input>
`;

exports[`Storyshots Input With Error Message 1`] = `
<Input
  input={
    Object {
      "errorMsg": "There is an error.",
      "id": "textInputId",
      "isReadOnly": false,
      "isRequired": false,
      "label": "Label Heading",
      "placeholder": "Enter value",
      "styling": "editable-white",
      "value": "some wrong value",
    }
  }
  onChange={[Function]}
>
  <div>
    <label
      className="label"
      htmlFor="textInputId"
    >
      <div
        className="input-label"
      >
        Label Heading
      </div>
       
      <span
        className="note"
      />
    </label>
    <input
      className="editable-white"
      defaultValue="some wrong value"
      id="textInputId"
      onChange={[Function]}
      placeholder="Enter value"
      readOnly={false}
      type="text"
    />
    <br />
    <span
      className="error"
    >
      There is an error.
    </span>
  </div>
</Input>
`;
